# InterfaceTest

./: CMakeLists.txt  main.cpp
HwDrivers/: mag3110.cpp  mag3110.h  rgb123.cpp  rgb123.h
OsDrivers/: MagOS.cpp  MagOS.h  RgbOS.cpp  RgbOS.h  SensorBank.h  SensorOS.h
